--- a/product/css/index.css
+++ b/product/css/index.css
@@ -2,18 +2,6 @@
     background-image: url(../images/banner.gif);
 }
 
-h3.line {
-    font-weight: 300;
-    border-left: 5px solid var(--clr-primary);
-    padding-left: 1em;
-}
-
-.separator {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .subtitle {
     margin-top: 2em;
 }
@@ -72,7 +60,7 @@ h3.line {
 }
 
 .subbanner--product {
-    height: clamp(300px, 50vh, 500px);
+    height: 500px;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
