--- a/root/css/index.css
+++ b/root/css/index.css
@@ -27,6 +27,7 @@
 :root {
     --clr-primary: #dc3545;
     --clr-black-l: #333333;
+    --clr-grey-1: hsl(0, 0%, 90%);
     --clr-black-h: #000;
     --clr-black-footer: #4a4a4a;
     --clr-white: #fff;
@@ -45,18 +46,22 @@ h1 p {
     font-family: "TCCC-UnityHeadline-Regular", sans-serif;
     font-weight: 500;
     color: var(--clr-black-l);
+    font-size: 1.1em;
 }
 
 .two--grid {
     display: grid;
+    grid-auto-flow: dense;
+    grid-auto-rows: auto;
     grid-template-columns: repeat(2, 1fr);
+    width: 100%;
 }
 
 .title {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: clamp(300px, 40vh, 500px);
+    height: 400px;
     background-color: center;
     background-position: center center;
     background-repeat: no-repeat;
@@ -69,4 +74,35 @@ h1 p {
     width: 80%;
     text-align: center;
     text-shadow: 0 0 7px rgb(0 0 0 / 50%);
+}
+
+.separator {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.line {
+    font-weight: 300;
+    border-left: 5px solid var(--clr-primary);
+    padding-left: 1em;
+}
+
+.triline {
+    position: relative;
+}
+
+.triline::before {
+    content: '';
+    background-image: url(../images/bubble.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: block;
+    width: 15px;
+    height: 40px;
+    padding: 0;
+    position: absolute;
+    /* top: 55px;
+    left: -30px; */
+    transform: translateX(-200%);
 }
